testing-utilities/k6/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k6
  labels:
    app: k6
spec:
  replicas: 1  # You can adjust the number of replicas if needed
  selector:
    matchLabels:
      app: k6
  template:
    metadata:
      labels:
        app: k6
    spec:
      containers:
        - name: k6
          image: grafana/k6:0.54.0  # You can use any base image here; it could be just a lightweight base image if you don't need k6
          command: ["sh", "-c", "while true; do sleep 1000; done"]  # Keep the container running indefinitely
          volumeMounts:
            - name: k6-script-volume
              mountPath: /etc/k6-script  # Mount the ConfigMap as a volume (if needed)
              readOnly: true  # Make it read-only since it's only for reading the script
          ports:
            - containerPort: 5665  # Expose port for the k6 web dashboard (if needed)
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      volumes:
        - name: k6-script-volume
          configMap:
            name: k6-script  # Reference the ConfigMap if required
